manifests/prod-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: swfs-op
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seaweedfs-operator
  namespace: swfs-op
  labels:
    app: seaweedfs-operator
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: seaweedfs-operator
  template:
    metadata:
      labels:
        app: seaweedfs-operator
    spec:
      automountServiceAccountToken: true
      serviceAccountName: seaweedfs-operator
      containers:
        - name: seaweedfs-operator
          image: docker.io/pierre42100/seaweedfs_k8s_operator:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: 300Mi
              cpu: "0.1"
            requests:
              memory: 150Mi
              cpu: "0.01"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: seaweedfs-operator
  namespace: swfs-op
spec:
  podSelector:
    matchLabels:
      app: seaweedfs-operator
  policyTypes:
    - Ingress
  ingress: []
